# ai4realnet-orchestrators

./: .gitignore  .openapi-generator-ignore  PLAYGROUND.md  README.md  conftest.py   fab_oauth_utils.py  pytest.ini  requirements-dev.txt  requirements.txt  test_containers_railway.py
ai4realnet_orchestrators/power_grid/: README.md  README_power_grid_test_runner.md  README_robustness_resilience_kpi_069_077.md  domain_shift_requirements.txt  energy_runner.py  orchestrator.py  power_grid_requirements.txt  power_grid_test_runner.py  pyproject.toml  runner-config.json  test_local_power_grid_kpis.py  test_local_robustness_resilience_kpi_069_077.py  test_runner.py  test_runner_kpi_008_012_036_power_grid.py  test_runner_kpi_af_008_power_grid.py  test_runner_kpi_af_051_power_grid.py  test_runner_kpi_cf_012_power_grid.py  test_runner_kpi_df_052_power_grid.py  test_runner_kpi_nf_024_power_grid.py  test_runner_kpi_of_036_power_grid.py  test_runner_kpi_rs_058_power_grid.py  test_runner_kpi_tf_034_power_grid.py  test_runner_robustness_resilience_kpi_069_077.py
ai4realnet_orchestrators/power_grid/configuration/: ai4realnet-large.json  ai4realnet-small.json  curriculum-ai4realnet-large.json  curriculum-ai4realnet-small.json  expert-ai4realnet-small.json  path-mapping.json  random-ai4realnet-large.json  random-ai4realnet-small.json  scoring-config.json
ai4realnet_orchestrators/power_grid/framework/: Grid2OpUtils.py  requirements.txt  setup_fab_power_grid.py
ai4realnet_orchestrators/power_grid/framework/attack_models/: BaseAttackerClass.py  Environment.py  (+7 more)
ai4realnet_orchestrators/power_grid/submission/: config.ini  my_agent.py
(+88 files in other folders)
